# streaming_vla

./: .gitignore  .gitmodules  AGENTS.md  README.md  action_tokenizers.py  eval_libero90_sync.py  gpu_occupy.py  guidance.md  libero90_dataset.py  libero90_offline_context_dataset.py  normalization.py  pylock.toml  pyproject.toml  streaming_rollout_step0.html  vla_qwen3.py
.libero/: config.yaml
LingBot_VA.egg-info/: PKG-INFO  requires.txt  top_level.txt
RTC_Flow/: README.md  __init__.py  pyproject.toml
RTC_Flow/configs/: rtc_async_vla.yaml  train_libero90_async.yaml  vla_qwen3_rtc.yaml
RTC_Flow/dataset/: __init__.py  libero90_async_dataset.py  libero90_async_offline_context_dataset.py
RTC_Flow/model/: __init__.py  template_qwen3_vla.py  vla_qwen3_rtc.py  vla_qwen3_rtc_online.py
RTC_Flow/model/qwen3_vl/: configuration_qwen3_vl.py  modular_qwen3_vl.py
RTC_Flow/model/rtc_async/: README.md  __init__.py
RTC_Flow/model/rtc_async/action_expert/: __init__.py  model.py
RTC_Flow/model/rtc_async/adapters/: __init__.py  condition_adapter.py  shape_protocol.py
RTC_Flow/model/rtc_async/compat/: __init__.py  vla_entry.py
RTC_Flow/model/rtc_async/online/: __init__.py
RTC_Flow/model/rtc_async/pipeline/: __init__.py  queue.py  stages.py  types.py
RTC_Flow/model/rtc_async/qwen3_stream/: __init__.py  kv_export.py  stream_runner.py  stream_runner_snapshot.py
RTC_Flow/model/rtc_async/training/: __init__.py  train_step.py
RTC_Flow/scripts/: __init__.py  eval_libero90_rtc_online.py  eval_online.py  rtc_rollout_utils.py  smoke_test_full.py  train_async.py  train_libero90_async.py
RTC_Flow/workspace/: eval_libero90_rtc_online.py  train_libero90_async.py
configs/: rtc_async_vla.yaml  sim_libero.yaml  sim_robotwin.yaml  train.yaml  train_libero90_async.yaml  train_libero90_sync.yaml  vla_qwen3.yaml  vla_qwen3_rtc.yaml
configs/data/: domino.yaml  libero_streaming_episode_2cam.yaml  robotwin_streaming_episode_3cam.yaml
configs/model/: fastwam.yaml  fastwam_streaming.yaml
configs/profile/: fastwam_async_action_throughput.yaml  fastwam_async_runtime_trace.yaml  fastwam_baseline.yaml  fastwam_streaming.yaml  fastwam_streaming_trace.yaml
configs/task/: domino_uncond_3cam_384_1e-4_h200_140g.yaml  libero_streaming_action_ft_2cam224_1e-4.yaml  libero_uncond_2cam224_1e-4.yaml  libero_uncond_2cam224_1e-4_h200_140g.yaml  robotwin_streaming_action_ft_3cam_384_1e-4.yaml  robotwin_uncond_3cam_384_1e-4.yaml  robotwin_uncond_3cam_384_1e-4_h200_140g.yaml  robotwin_uncond_3cam_384_subset_tokenwise.yaml
dataset/: __init__.py  bucket_sampler.py  libero90_async_dataset.py  libero90_async_offline_context_dataset.py  libero90_dataset.py  libero90_offline_context_dataset.py  replay_buffer.py
experiments/libero/: action_ensembler.py  async_streaming_runtime.py  async_streaming_runtime_profiled.py  async_streaming_workers.py  async_streaming_workers_profiled.py  build_xt_replay.py  check_libero_proprio_hypothesis.py  collect_async_schedules.py  collect_libero_layer_distribution.py  compare_first_obs_runtime_vs_infer.py  compare_libero_chunk_tail_to_gt.py  compare_libero_curr_wrong_chunk_tail_to_gt.py  compare_libero_future_wrong_chunk_tail_to_gt.py  compare_libero_native_async_utils.py  compare_libero_prev_wrong_chunk_tail_to_gt.py  compare_with_baseline.py  eval_cache_obs_ablation_mse.py  eval_dataset_obs_runtime_mse.py  eval_dataset_obs_sync_mse.py  eval_first_obs_runtime_ckpt_mse.py  (+16 more)
model/: action_tokenizers.py  template_qwen3_vla.py  vla_qwen3.py  vla_qwen3_rtc.py  vla_qwen3_rtc_online.py
qwen3_vl/: modeling_qwen3_vl.py  processing_qwen3_vl.py  stream_runner.py  video_processing_qwen3_vl.py
reports/: libero90_async_eval.json
scripts/: __init__.py  benchmark_async_action_throughput.py  convert_domino_to_lerobot.py  eval_libero90_rtc_online.py  eval_online.py  profile_fastwam_baseline.py  profile_streaming.py  simulate_streaming_runtime.py  smoke_test_full.py  trace_streaming_kv.py  train.py  train_async.py  train_libero90_async.py  train_streaming_action_ft.py  train_zero2.sh
stream_vla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: __init__.py  pipeline_queue.py  pipeline_types.py  stages.py  vla_utils.py
workspace/: check_token_id_stability.py  debug_rtc_prompt_step_masks.py  eval_libero90_gt_prefix.py  eval_libero90_rtc_online.py  eval_libero_rtc_async_success.py  eval_online.py  gt_prefix_sim.py  inspect_offline_context_and_gt.py  inspect_offline_context_sample.py  libero_rollout.py  profile_pipeline_stages.py  profile_single_gpu_pipeline_throughput.py  profile_sync_pipeline_throughput.py  rollout_libero_no_rtc_async_video.py  rollout_libero_rtc_async_video.py  throughput_profile.json  train_async.py  train_libero90_async.py  train_libero90_no_rtc.py  train_libero90_sync.py
(+86 files in other folders)
