[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stream_vla"
version = "0.0.0"
authors = [
    { name = "Robbyant Team", email = "fengchang.ll@antgroup.com" }
]
license = "MIT"
readme = "oat/README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "accelerate>=1.12.0",
    "av>=16.1.0",
    "bddl>=3.6.0",
    "cloudpickle>=3.1.2",
    "dill>=0.4.1",
    "diffusers>=0.36.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "gym>=0.26.2",
    "gymnasium>=1.2.3",
    "hydra-core>=1.3.2",
    "imageio",
    "libero",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4,<2",
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "tokenizers>=0.21.4",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm",
    "transformers>=4.57.6",
    "vector-quantize-pytorch>=1.27.19",
    "wandb>=0.24.0",
    "zarr>=2.18.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "huggingface-hub"
]
flash = [
    "flash-attn",
]

[project.urls]
homepage = "https://github.com/Robbyant"
documentation = "https://github.com/Robbyant"
repository = "https://github.com/Robbyant"
huggingface = "https://github.com/Robbyant"
modelscope = "https://github.com/Robbyant"
discord = "https://github.com/Robbyant"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
include = ["dataset*", "model*", "utils*"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
libero = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "oat/third_party/LIBERO",
]
