[project]
name = "rtc-flow"
version = "0.1.0"
description = "Streaming_VLA"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "numpy>=1.26",
  "torch>=2.2",
  "tqdm>=4.66",
  "wandb>=0.18",
  "imageio>=2.34",
  "zarr>=2.18",
  "pyyaml>=6.0.1",
  "transformers>=4.46",
  "peft>=0.14",
  "accelerate>=1.0",
  "einops>=0.8",
  "torchvision>=0.25.0",
  "robosuite==1.4.0",
  "robomimic==0.2.0",
  "bddl>=3.6.0",
  "cloudpickle>=3.1.2",
  "easydict>=1.13",
  "gym>=0.26.2",
  "gymnasium>=1.2.3",
  "matplotlib>=3.10.8",
  "pandas>=2.3.3",
]

[tool.uv]
package = false
