[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastwam"
version = "0.1.0"
description = "FastWAM: standalone Wan2.2-TI2V-5B training/inference package"
requires-python = ">=3.10,<3.11"
dependencies = [
  "accelerate==1.12.0",
  "av==16.0.1",
  "azure==4.0.0",
  "azure-ai-inference>=1.0.0b9",
  "boto3==1.35.99",
  "datasets==3.6.0",
  "deepspeed==0.18.5",
  "einops==0.8.1",
  "ffmpeg>=1.4",
  "gitpython==3.1.45",
  "gymnasium==0.29.1",
  "h5py>=3.16.0",
  "huggingface-hub==0.29.2",
  "hydra-core==1.3.2",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
  "jsonlines==4.0.0",
  "matplotlib>=3.10.8",
  "modelscope==1.34.0",
  "moviepy>=1.0.3",
  "mplib==0.2.1",
  "numpy==1.26.4",
  "omegaconf==2.3.0",
  "open3d==0.18.0",
  "openai>=2.31.0",
  "packaging==25.0",
  "pandas==2.2.3",
  "pillow==12.0.0",
  "pyarrow==23.0.0",
  "pydantic>=2.12.5",
  "pyglet<2",
  "pytorch3d",
  "regex==2025.11.3",
  "rich==14.2.0",
  "safetensors==0.5.3",
  "sapien==3.0.0b1",
  "scipy==1.10.1",
  "setuptools<70.0.0",
  "termcolor==2.5.0",
  "torch==2.7.1+cu128",
  "torchcodec==0.5",
  "torchvision==0.22.1+cu128",
  "tqdm==4.66.5",
  "transformers==4.49.0",
  "transforms3d==0.4.2",
  "trimesh==4.4.3",
  "typing-extensions==4.15.0",
  "wandb==0.23.1",
  "zarr>=2.18.3",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastwam*"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128/"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git", rev = "stable" }

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch"]
