[project]
name = "rtc-flow"
version = "0.1.0"
description = "RTC_Flow training and online inference pipeline for Streaming_VLA"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "numpy>=1.26",
  "torch>=2.2",
  "tqdm>=4.66",
  "wandb>=0.18",
  "imageio>=2.34",
  "zarr>=2.18",
  "pyyaml>=6.0.1",
  "transformers>=4.46",
  "accelerate>=1.0",
  "einops>=0.8",
  "torchvision>=0.25.0",
]

[tool.uv]
package = false
